# memory-index

./: .gitignore  README.md  pyproject.toml  setup.bat
scripts/: backup_to_drive.py  daily-backup.bat  detect_gpu.py  export_onnx.py
src/: config.py  hardware.py  server.py
src/graph/: manager.py  traversal.py
src/indexer/: calibration.py  embedder.py  store.py
src/models/: entity.py  observation.py  relation.py
src/tools/: entities.py  graph_analysis.py  librarian.py  maintenance.py  portability.py  relations.py  search.py  status.py  temporal.py  visualize.py
tests/: test_graph.py  test_graph_analysis.py  test_librarian.py  test_maintenance.py  test_portability.py  test_search.py  test_store.py  test_temporal.py  test_tools.py
