[project]
name = "memory-index"
version = "0.1.0"
description = "Local MCP server for persistent entity/observation/relation memory via semantic search"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "chromadb",
    "sentence-transformers",
    "transformers",
    "einops",
    "onnxscript",
    "onnxruntime",
    "networkx",
    "scikit-learn",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
