[project]
name = "memory-index"
version = "0.1.0"
description = "Local MCP server for persistent entity/observation/relation memory via semantic search"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]==1.22.0",
    "chromadb",
    "sentence-transformers",
    "transformers",
    "einops",
    "onnxscript",
    "onnxruntime",
    "networkx",
    "scikit-learn",
    "uvicorn==0.34.0",
]

[project.optional-dependencies]
backup = [
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
